patch use-bug + fontAwesom

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
 
     <div class="input-group-lg input-group w-auto m-2">
-        <span class="input-group-text  text-center">🕐</span>
+        <span class="input-group-text  text-center"><i class="fa-regular fa-clock"></i></span>
         <div class="form-floating ">
             <input type="number" name="time" id="time" value="25" max="59" min="1" class="form-control">
             <label for="time" class="form-label" >Durée de travail (Minutes)</label>
@@ -23,7 +23,7 @@
     </div>
 
     <div class="input-group input-group-lg w-auto m-2">
-        <span class="input-group-text">☕</span>
+        <span class="input-group-text"><i class="fa-solid fa-mug-hot"></i></span>
         <div class="form-floating">
             <input type="number" name="pause" id="pause" value="5" max="59" min="1" class="form-control">
             <label for="pause" >Temps de pause (Minutes)</label>
@@ -41,6 +41,6 @@
 
     <input type="button" value="Start" onclick="Click()" id="but" class="btn btn-success m-2">
     <script src="script.js"></script>
-    
+    <script src="https://kit.fontawesome.com/cfa8c7d08e.js" crossorigin="anonymous"></script>
 </body>
 </html>
