--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Pomodoro</title>
 </head>
 <body >
@@ -40,7 +40,7 @@
     </div>
 
     <input type="button" value="Start" onclick="Click()" id="but" class="btn btn-success m-2">
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
     <script src="https://kit.fontawesome.com/cfa8c7d08e.js" crossorigin="anonymous"></script>
 </body>
 </html>
